--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(white);
+    color: var(#EEEEEE);
 }
 
 @media (max-width: 991.98px) {
@@ -117,7 +117,7 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: var(white);
+    color: var(#EEEEEE);
     font-weight: 500;
 }
 
